# hermes-opencode-mcp

./: .gitignore  INSTALL_AND_RELEASE.md  LICENSE  MCP_POLICY.md  README.md  TOPIC_ROUTING.md  WORKER_POLICY.md  pyproject.toml
deploy/env/: hermes-opencode-mcp.env.example
deploy/systemd/: hermes-opencode-mcp.service
docs/: MIGRATION_FROM_BRIDGE.md  QUICKSTART.md  RUNBOOK_AND_SKILL_INDEX.md  TOPIC_ROUTING_FLOW.md
docs/hermes-skills/: INSTALL_HERMES_SKILL.md
docs/legacy-bridge/: ONBOARDING.md  SKILL.md  WORKER_POLICY.md
docs/runbooks/: BOOTSTRAP_HERMES_MCP_ON_CONTROL_VM.md  OPERATE_HERMES_OPENCODE_MCP.md  PREPARE_OPENCODE_TARGET_VM.md
legacy/hermes-opencode-bridge/: MIGRATED_TO_MCP.md  ONBOARDING.md  README.md  SKILL.md  WORKER_POLICY.md  pyproject.toml
legacy/hermes-opencode-bridge/src/hermes_opencode_bridge/: cli.py  config.py  executor.py  hermes_client.py  models.py  opencode_adapter.py  routing.py  sanitizer.py  server.py  store.py
legacy/hermes-opencode-bridge/templates/: lanes.example.json  topic_routes.example.json
legacy/hermes-opencode-bridge/tests/: test_config.py  test_executor.py  test_hermes_client.py  test_opencode_adapter.py  test_routing.py  test_sanitizer.py  test_server.py
scripts/: check_hermes_skill_sync.sh  e2e_live.py  install_hermes_skill.sh  provision-bridge-target.py  sync_hermes_skill.sh
templates/: lanes.example.json  targets.example.json  topic-routing.example.json  topic-routing.example.yaml  topic_routes.example.json
tests/: test_adapter.py  test_client.py  test_config.py  test_routing.py  test_service.py
(+27 files in other folders)
