[project]
name = "hermes-opencode-bridge"
version = "0.1.0"
description = "Bootstrap-first, security-first worker bridge for Hermes to route tasks to onboarded OpenCode target nodes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiohttp>=3.10,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=9,<10",
  "pytest-aiohttp>=1.1,<2",
]

[project.scripts]
hermes-opencode-bridge = "hermes_opencode_bridge.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
